--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Notes</string>
+    <string name="error_loading_notes">Failed to load notes. Please try again later.</string>
 </resources>
