--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My Notes</string>
     <string name="error_loading_notes">Failed to load notes. Please try again later.</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 </resources>
