--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">My Notes</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
+    <string name="delete">Delete</string>
 
     <string name="error_loading_notes">Failed to load notes. Please try again later.</string>
     <string name="error_loading_note">Failed to load note. Please try again later.</string>
